<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="@+id/password_et" />

    <Button
        android:id="@+id/email_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_email_login"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <Button
        android:id="@+id/join_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_join"
        app:layout_constraintEnd_toEndOf="@+id/email_login_btn"
        app:layout_constraintStart_toStartOf="@+id/email_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/email_login_btn" />

    <ProgressBar
        android:id="@+id/loading_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_google_login"
        app:layout_constraintEnd_toEndOf="@+id/join_btn"
        app:layout_constraintStart_toStartOf="@+id/join_btn"
        app:layout_constraintTop_toBottomOf="@+id/join_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>